--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -7,8 +7,8 @@
 			<div class="container h-100">
 			<div class="row d-flex justify-content-center align-items-center h-100">
 				<div class="col-12 col-md-9 col-lg-7 col-xl-6">
-				<div class="card reg-card" style="border-radius: 15px;">
-					<div class="card-body p-5">
+				<div class="card reg-card login-container-parent" style="border-radius: 15px;">
+					<div class="card-body p-5 login-container">
 					<h2 class="text-uppercase text-center register-title mb-4">Create an account</h2>
 					
 
@@ -63,8 +63,16 @@
 							class="btn btn-success btn-block btn-md gradient-custom-4 text-body">Register</button>
 						</div>
 
-						<p class="text-center text-muted mt-3 mb-0">Have already an account? <a href="login"
-							class="fw-bold text-body"><u>Login here</u></a></p>
+						<p class="text-center text-muted mt-3 mb-0">
+							<span class="footer-text">
+								Have already an account?
+							</span>
+							<a href="login" class="fw-bold text-body">
+								<span class="footer-text">
+									<u>Login here</u>
+								</span>
+							</a>
+						</p>
 
 					</form>
 
