text overflow and project focus at the creation fixies

--- a/dashboard/templates/dashboard/item.html
+++ b/dashboard/templates/dashboard/item.html
@@ -6,7 +6,7 @@
     <div class="item-board simple-item-box row">
 {% endif %}
  
-    <div class="simple-item col-sm-10 d-flex align-items-center" style="overflow: hidden;">{{text}}</div>
+    <div class="simple-item col-sm-10 d-flex align-items-center in-bound-text" style="overflow: hidden;">{{text}}</div>
     
     <!-- the ids and arguments should be created dinamically -->
     <div class="dropdown col-sm-2" id="item-{{id}}" onclick="toggleDropdown(this.id)">
