--- a/user/templates/user/user_dashboard.html
+++ b/user/templates/user/user_dashboard.html
@@ -79,9 +79,10 @@
                     
                 }else if(sessionStorage.getItem('projects')){
 
-                    var projs = JSON.parse(sessionStorage.getItem('projects'));                 
+                    var projs = JSON.parse(sessionStorage.getItem('projects'));                                     
                     loadSelectedProject(loadProjectFromSession(projs[0].id));
                     sessionStorage.setItem("selectedProject", JSON.stringify({id:projs[0].id, name: projs[0].name}));
+                    document.getElementById("selectedProjectTitle").textContent = projs[0].name;
                 }
 
             }).catch(err=>{
